syntax = "proto3";
package params_proto;
option go_package = "keymv.io/proto/params_proto";

//Define response body
message RequestParam {
  string param = 1;
  string customValues = 2;
  string authToken = 3;
}

message ResponseParam {
  string requestId = 1;
  string paramValue = 2;
  string fromAppliedPolicyId = 3;  
}

message RequestParams {
  string param = 1;
}

message ResponseParams {
  int32 requestId = 1;
  string paramValue = 2;
  string fromAppliedPolicyId = 3;  
}

service ParamReader {
  rpc getParam(RequestParam) returns (ResponseParam) {}
}